# temporal-rag-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  gradio_app.py  main.py  pyproject.toml
.github/: copilot-instructions.md
data/: chunks.csv  video_chunks.csv  videos.csv
notebooks/: test.ipynb
public/: index.html
src/: dependencies.py
src/api/: agentic_ask.py  ask.py  auth.py  chunks.py  users.py
src/core/: config.py  logging.py  security.py
src/database/: config.py  seed.py  session.py
src/gradio_ui/: api_client.py  app.py  components.py  config.py  handlers.py  styles.py  utils.py
src/models/: chunk.py  user.py  video.py
src/repositories/: chunk.py  user.py  video.py
src/schemas/: agentic_ask.py  ask.py  chunk.py  user.py  video.py
src/services/: ask.py  bm25.py  chunk.py  user.py
src/services/rag/: agent_graph.py  bm25.py  config.py  context.py  factory.py  prompts.py  state.py  tools.py  vectordb.py
src/services/rag/nodes/: __init__.py  generate_answer_node.py  guardrail_node.py  nodes.py  reponse_node.py  test.md  utils.py
test/: test_concurrent.py
