[project]
name = "fastapi-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "ipykernel>=7.2.0",
    "langchain-google-genai>=4.2.1",
    "langchain-chroma>=1.1.0",
    "onnxruntime>=1.24.4",
    "langchain-community>=0.4.1",
    "langchain-elasticsearch>=1.0.0",
    "rank-bm25>=0.2.2",
]
